fixed scrollbar and fonts

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     color: #333;
-    font-family: 'Spartan', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     letter-spacing: 1px;
     text-align: center;
 }
